# realty

./: .travis.yml  CMakeLists.txt  README.md  dataset-1.csv  dataset-minimal.csv  dataset.csv  defines.h  rclss.cpp  rclss.h  rclss_main.cpp  rclst.cpp  rclst.h  rclst_main.cpp  train-dataset-100.csv  train-dataset-20.csv  train-dataset-30.csv  train-dataset-eigths.csv  train-dataset-half.csv  train-dataset-minimal.csv  train-dataset-quarter.csv  utils.cpp  utils.h
